--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^5.2.4",
+    "node-sass": "^5.0.0",
+    "scss-loader": "0.0.1"
   }
 }
